Added bulma styling to registration view templates.

--- a/seolynn/templates/django_registration/activation_complete.html
+++ b/seolynn/templates/django_registration/activation_complete.html
@@ -2,5 +2,9 @@
 {% load i18n %}
 
 {% block contents %}
-<p>{% trans "Your account is now activated." %}</p>
+    <section class="hero is-link">
+        <div class="hero-body">
+            <p class="subtitle mt-2">{% trans "Your account is now activated." %}</p>
+        </div>
+    </section>
 {% endblock %}
