--- a/seolynn/templates/django_registration/activate.html
+++ b/seolynn/templates/django_registration/activate.html
@@ -2,7 +2,9 @@
 {% load i18n %}
 
 {% block contents %}
-
-<p>{% trans "Account activation failed" %}</p>
-
+    <section class="hero is-link">
+        <div class="hero-body">
+            <p class="subtitle mt-2">{% trans "Account activation failed" %}</p>
+        </div>
+    </section>
 {% endblock %}
