--- a/seolynn/templates/django_registration/registration_complete.html
+++ b/seolynn/templates/django_registration/registration_complete.html
@@ -2,5 +2,11 @@
 {% load i18n %}
 
 {% block contents %}
-<p>{% trans "You are now registered. Activation email sent." %}</p>
+
+<section class="hero is-link">
+    <div class="hero-body">
+        <p class="subtitle mt-2">{% trans "You are now registered. Activation email sent." %}</p>
+        <p class="subtitle mt-2">Please Check the email you used during registration.</p>
+    </div>
+</section>
 {% endblock %}
