--- a/seolynn/templates/header.html
+++ b/seolynn/templates/header.html
@@ -41,6 +41,20 @@
           </div>
         </div>
         {% endif %}
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">
+            Portfolio
+          </a>
+  
+          <div class="navbar-dropdown">
+            <a class="navbar-item" href="{% url 'ApplicationPortfolio'  %}">
+              Web Applications
+            </a>
+            <a class="navbar-item" href="{% url 'CaseStudyPortfolio'  %}">
+              Data Science Case Studies
+            </a>
+          </div>
+        </div>
       </div>
   
       <div class="navbar-end">
