--- a/seolynn/templates/base.html
+++ b/seolynn/templates/base.html
@@ -7,6 +7,19 @@
         {% block title %}
 
         {% endblock %}
+
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGWE5NYLML"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-PGWE5NYLML');
+        </script>
+
+
     </head>
     <body>
         {% include "header.html" %}
