--- a/seolynn/templates/base.html
+++ b/seolynn/templates/base.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+        <link rel="shortcut icon" type="image/png" href="{% url 'favicon' %}"/>
         {% block title %}
 
         {% endblock %}
