--- a/seolynn/templates/base.html
+++ b/seolynn/templates/base.html
@@ -5,10 +5,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
+        <meta name="description" content="I build Django and Flask Apps! I can also do react and vue.">
+
+        <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
         <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
         {% block title %}
-
+        
         {% endblock %}
 
 
