--- a/seolynn/templates/header.html
+++ b/seolynn/templates/header.html
@@ -2,7 +2,7 @@
     <div class="navbar-brand">
         <a class="navbar-item" href="/">
             <!-- <img src="" width="112" height="28"> -->
-            <p class="title has-text-light">Seolynn Data</p>
+            <p class="title has-text-white">Seolynn Data</p>
         </a>
     
         <a role="button" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
